--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,12 +1,34 @@
 ---
 layout: archive
 title: "Teaching"
-permalink: /teaching/
+permalink: teaching/
 author_profile: true
+
 ---
+
+<style type='text/css'>
+h2, h3, h4, h5, h6 {margin: 0;}
+.br {display: block; margin-bottom: 0em; margin: 0;} 
+</style>
 
 {% include base_path %}
 
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+### Assistant Teaching Professor at Northeastern University Khoury College of Computer Sciences
+#### Fundamentals of Computer Science I (Undergrad) | Fall 2023
+#### Fundamentals of Computer Science II (undergrad) | Spring 2024
+#### Intensive Foundations of Computer Science [(Align Program)](https://www.khoury.northeastern.edu/programs/align-masters-of-science-in-computer-science/) | Fall 2022, Fall 2023
+#### Object-oriented Design [(Align Program)](https://www.khoury.northeastern.edu/programs/align-masters-of-science-in-computer-science/) | Fall 2022, Spring 2023, Summer 2023, Spring 2024
+#### Labs for Fundamentals of Computer Science I and II (Undergrad) | Fall 2022, Spring 2023
+#### Graduate Natural Language Processing | [Fall 2023](https://rasikabh.github.io/nlp2023/)
+#### Graduate AI | [Summer 2024](https://rasikabh.github.io/ai2024su/)
+<br/>
+
+
+### 2024
+#### [Fall 2024 | Natural Language Processing] North eastern university(https://selimmd.github.io/nlp2024/)
+#### [Spring 2024 | Advance Software Design] North eastern university
+<br/>
+
+### 2022
+#### [Fall 2022 | Engineering I] First year engineering at University of Kentucky
+<br/>
